# excel-schema

./: LICENSE  README.md  pyproject.toml
examples/: mark_errors.py  products.xlsx  products_with_errors.xlsx  quickstart.py  validation_and_reading.py
src/excel_schema_engine/: __init__.py  builder.py  errors.py  global_vars.py  reader.py  schema.py  utils.py  validator.py
tests/: conftest.py  test_builder.py  test_errors.py  test_reader.py  test_validator.py  test_write_rows.py
tests/outputs/: builder.xlsx  errors.xlsx  reader.xlsx  validator.xlsx  write_rows.xlsx
